
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.4-pl
====================================
- [#MODX-2385] Fixed issue when Context ACL is using no policy that prevented grid loading
- [#MODX-2380] Fixed issue with upgrades and rb_base_dir, rb_base_url and filemanager_path
- [#MODX-2246] Added topmenu_show_descriptions system setting to be able to toggle the top menus description text
- [#MODX-2375] Improved class key field in Resource panel to a dropdown, added modClassMap for easier querying of resource/element types
- [#MODX-2391] Fixed issues with FC rules not being respected on resource/create with default values for new Resource
- [#MODX-2382] Fixed dynamic width of fields in windows across ui
- [#MODX-2383] Fix inability to update rank of TV's in template editor
- [#MODX-2379] Fixed issue where permission checks were swapped in Resource context menu with regards to delete/undelete
- [#MODX-2384] Fixed issue where treepanel still showed if all trees were hidden via permissions
- [#MODX-2389] Fixed issue where setup options, license and readme displays were not cleared after installation of package
- Fixed issue where loading mask shows up and never disappears on extended Resource types
- [#MODX-2388] Fixed issue with save button and user settings
- [#MODX-2387] Fixed issue with user settings not able to be added via mgr ui
- Fixed bug that would reset provider for updated packages
- Fixed issue with paging toolbar pageSize being interpreted as string rather than int
- Fixed issue where parent id constraint was ignored for default template on new Resources
- Added sanitization to REQUEST_URI for login controller
- Updated version to 2.0.4-pl

MODx Revolution 2.0.3-pl (September 30, 2010)
====================================
- Fixed error in modResource::cleanAlias when context var is not available