@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.4-pl
 ====================================
+- Added `for_parent` field to FC rules, to allow for more fine-grained control of rule applications
 - [#MODX-2385] Fixed issue when Context ACL is using no policy that prevented grid loading
 - [#MODX-2380] Fixed issue with upgrades and rb_base_dir, rb_base_url and filemanager_path
 - [#MODX-2246] Added topmenu_show_descriptions system setting to be able to toggle the top menus description text
